# mlops-zoomcamp

./: .gitattributes  .gitignore  pyproject.toml
01-intro/: duration-prediction.ipynb  homework.ipynb
02-experiment-tracking/homework/: hpo.py  register_model.py  train.py
03-orchestration/: homework.py
