[tool.poetry]
name = "mlops-zoomcamp"
version = "0.1.0"
description = ""
authors = ["Alexander Lukoyanov <a.lukoyanov@tinkoff.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
scikit-learn = "^1.1.1"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
jupyter = "^1.0.0"
pyarrow = "^8.0.0"
mlflow = "^1.26.1"
hyperopt = "^0.2.7"
xgboost = "^1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
